--- a/UrlProjectDemo/shareHomeworkInfo.html
+++ b/UrlProjectDemo/shareHomeworkInfo.html
@@ -107,5 +107,10 @@
 </div>
 <script src="js/vue.js"></script>
 <script src="js/index.js"></script>
+<script type="text/javascript">
+    document.body.addEventListener('touchmove', function (e) {
+      e.preventDefault(); //阻止默认的处理方式(阻止下拉滑动的效果)
+    }, {passive: false});
+</script>
 </body>
 </html>
