--- a/UrlProjectDemo/shareHomeworkInfo.html
+++ b/UrlProjectDemo/shareHomeworkInfo.html
@@ -107,5 +107,11 @@
 </div>
 <script src="js/vue.js"></script>
 <script src="js/index.js"></script>
+<script>
+    $(function () {
+        $('html').css('overflow','hidden');
+        $('body').css('overflow','hidden');
+    });
+</script>
 </body>
 </html>
