--- a/UrlProjectDemo/shareHomeworkInfo.html
+++ b/UrlProjectDemo/shareHomeworkInfo.html
@@ -107,11 +107,14 @@
 </div>
 <script src="js/vue.js"></script>
 <script src="js/index.js"></script>
-<script>
-    $(function () {
-        $('html').css('overflow','hidden');
-        $('body').css('overflow','hidden');
-    });
+<script type="text/javascript">
+    //判断h5是否从微信进入
+    if(window.navigator.userAgent.toLowerCase().match(/MicroMessenger/i) == 'micromessenger'){
+        $('#coverBackview').css('display','block');
+        $('body').on('touchmove', function (event) {
+            event.preventDefault();
+        });
+    }
 </script>
 </body>
 </html>
