--- a/UrlProjectDemo/shareHomeworkInfo.html
+++ b/UrlProjectDemo/shareHomeworkInfo.html
@@ -111,9 +111,9 @@
     //判断h5是否从微信进入
     if(window.navigator.userAgent.toLowerCase().match(/MicroMessenger/i) == 'micromessenger'){
         $('#coverBackview').css('display','block');
-        $('body').on('touchmove', function (event) {
-            event.preventDefault();
-        });
+        document.body.addEventListener('touchmove', function (e) {
+            e.preventDefault(); //阻止默认的处理方式(阻止下拉滑动的效果)
+        }, {passive: false});
     }
 </script>
 </body>
