--- a/UrlProjectDemo/shareHomeworkInfo.html
+++ b/UrlProjectDemo/shareHomeworkInfo.html
@@ -110,10 +110,10 @@
 <script type="text/javascript">
     //判断h5是否从微信进入
     if(window.navigator.userAgent.toLowerCase().match(/MicroMessenger/i) == 'micromessenger'){
-        $('body').addClass('index_body');
+        // $('body').addClass('index_body');
         $('#coverBackview').css('display','block');
     } else {
-        $('body').removeClass('index_body');
+        // $('body').removeClass('index_body');
     }
 </script>
 </body>
