--- a/UrlProjectDemo/shareHomeworkInfo.html
+++ b/UrlProjectDemo/shareHomeworkInfo.html
@@ -110,7 +110,7 @@
 <script type="text/javascript">
     //判断h5是否从微信进入
     if(window.navigator.userAgent.toLowerCase().match(/MicroMessenger/i) == 'micromessenger'){
-        // $('body').addClass('index_body');
+        $('body').addClass('index_body');
         $('#coverBackview').css('display','block');
     } else {
         // $('body').removeClass('index_body');
