判断应用从什么机器中打开

--- a/sharehomeworkinfo/sharehomeworkinfo.html
+++ b/sharehomeworkinfo/sharehomeworkinfo.html
@@ -90,7 +90,7 @@
         <div id="share_tipBackview"></div>
         <div id="share_bottom">
             <span id="bottom_span">请在智学网APP内完成练习</span>
-            <button id="bottom_btn">打开应用</button>
+            <button id="bottom_btn" :click="openApp">打开应用</button>
         </div>
     </div>
 </div>
