--- a/sharehomeworkinfo/sharehomeworkinfo.html
+++ b/sharehomeworkinfo/sharehomeworkinfo.html
@@ -90,7 +90,7 @@
         <div id="share_tipBackview"></div>
         <div id="share_bottom">
             <span id="bottom_span">请在智学网APP内完成练习</span>
-            <button id="bottom_btn" v-on:click="openApp">打开应用</button>
+            <button id="bottom_btn" onclick="openApp">打开应用</button>
         </div>
     </div>
 </div>
@@ -108,13 +108,23 @@
 <script src="js/vue.js"></script>
 <script src="js/index.js"></script>
 <script type="text/javascript">
-    //判断h5是否从微信进入
-    if(window.navigator.userAgent.toLowerCase().match(/MicroMessenger/i) == 'micromessenger'){
-        document.body.addEventListener('touchmove', function (e) {
-            e.preventDefault(); //阻止默认的处理方式(阻止下拉滑动的效果)
-        }, {passive: false});
-        $('#coverBackview').css('display','block');
-    }
+    $(function () {
+        //判断h5是否从微信进入
+        if(window.navigator.userAgent.toLowerCase().match(/MicroMessenger/i) == 'micromessenger'){
+            document.body.addEventListener('touchmove', function (e) {
+                e.preventDefault(); //阻止默认的处理方式(阻止下拉滑动的效果)
+            }, {passive: false});
+            $('#coverBackview').css('display','block');
+        }
+        //打开应用
+        function openApp(){
+            var u = navigator.userAgent, app = navigator.appVersion
+            var isAndroid = u.indexOf('Android') > -1 || u.indexOf('Linux') > -1 //android终端或者uc浏览器
+            var isiOS = !!u.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/) //ios终端
+            alert('是否是Android：'+isAndroid)
+            alert('是否是iOS：'+isiOS)
+        }
+    });
 </script>
 </body>
 </html>
