--- a/sharehomeworkinfo/sharehomeworkinfo.html
+++ b/sharehomeworkinfo/sharehomeworkinfo.html
@@ -123,6 +123,14 @@
             var isiOS = !!u.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/) //ios终端
             alert('是否是Android：'+isAndroid)
             alert('是否是iOS：'+isiOS)
+            //打开appstore或app
+            if (isiOS) {
+                window.location = "https://itunes.apple.com/cn/app/jian-kang-mao-rang-yun-dong/id966436668?mt=8"; //android下载地址
+            }
+            //打开android应用或应用宝
+            if (isAndroid) {
+                window.location =  'http://www.wjtr.com/download/index.html'
+            }
         });
     });
 </script>
