--- a/sharehomeworkinfo/sharehomeworkinfo.html
+++ b/sharehomeworkinfo/sharehomeworkinfo.html
@@ -116,20 +116,22 @@
             }, {passive: false});
             $('#coverBackview').css('display','block');
         };
+
         //打开应用
         $('#bottom_btn').click(function () {
-            var u = navigator.userAgent, app = navigator.appVersion
-            var isAndroid = u.indexOf('Android') > -1 || u.indexOf('Linux') > -1 //android终端或者uc浏览器
-            var isiOS = !!u.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/) //ios终端
-            alert('是否是Android：'+isAndroid)
-            alert('是否是iOS：'+isiOS)
+            var u = navigator.userAgent, app = navigator.appVersion;
+            var isAndroid = u.indexOf('Android') > -1 || u.indexOf('Linux') > -1; //android终端或者uc浏览器
+            var isiOS = !!u.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/); //ios终端
+            console.log('是否是Android：'+isAndroid);
+            console.log('是否是iOS：'+isiOS);
             //打开appstore或app
             if (isiOS) {
-                window.location = "https://itunes.apple.com/cn/app/jian-kang-mao-rang-yun-dong/id966436668?mt=8"; //android下载地址
+                //appstore商店
+                window.location = "https://itunes.apple.com/cn/app/智学网-让学习更简单/id981030648?mt=8"; //ios下载地址
             }
             //打开android应用或应用宝
             if (isAndroid) {
-                window.location =  'http://www.wjtr.com/download/index.html'
+                window.location =  'http://www.wjtr.com/download/index.html';
             }
         });
     });
