--- a/sharehomeworkinfo/sharehomeworkinfo.html
+++ b/sharehomeworkinfo/sharehomeworkinfo.html
@@ -127,7 +127,7 @@
             //打开appstore或app
             if (isiOS) {
                 //appstore商店
-                $('a').attr('href','https://itunes.apple.com/cn/app/智学网-让学习更简单/id981030648?mt=8');
+                // $('a').attr('href','https://itunes.apple.com/cn/app/智学网-让学习更简单/id981030648?mt=8');
                 //判断app是否安装
                 var ifr = document.createElement('iframe');
                 ifr.src = 'zhixue://';
