--- a/sharehomeworkinfo/sharehomeworkinfo.html
+++ b/sharehomeworkinfo/sharehomeworkinfo.html
@@ -127,14 +127,9 @@
             //打开appstore或app
             if (isiOS) {
                 //appstore商店
-                // $('a').attr('href','https://itunes.apple.com/cn/app/智学网-让学习更简单/id981030648?mt=8');
-                //判断app是否安装
-                var ifr = document.createElement('iframe');
-                ifr.src = 'zhixue://';
-                ifr.style.display = 'none';
-                document.body.appendChild(ifr);
-                setTimeout(function(){
-                    document.body.removeChild(ifr);
+                window.location.href = "zhixue://";
+                timer = setTimeout(function() {
+                    window.location.href = "https://itunes.apple.com/cn/app/智学网-让学习更简单/id981030648?mt=8";
                 }, 3000);
             }
             //打开android应用或应用宝
