--- a/sharehomeworkinfo/sharehomeworkinfo.html
+++ b/sharehomeworkinfo/sharehomeworkinfo.html
@@ -6,7 +6,7 @@
     <meta name="full-screen" content="yes" />
     <meta name="x5-fullscreen" content="true" />
     <meta name="keywords" content="我是关键字" />
-    <meta name="description" content="我是网站描述" />
+    <meta name="description" content="欢迎进入新的页面" />
     <meta http-equiv="Cache-Control" content="no-siteapp" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="format-detection" content="telephone=no,email=no" />
@@ -23,6 +23,7 @@
     <link type="text/css" rel="styleSheet" href="./css/index.css" />
 </head>
 <body>
+<img style="display: none;width: 300px;height: 300px;" src="./image/assignHwork_individuationHwork@2x.png" alt=""/>
 <div class="wrap" id="app" v-cloak>
     <img id="share_leftImage" src="./image/share_leftImg@2x.png" alt=""/>
     <img id="share_rightImage" src="./image/share_rightImg@2x.png" alt=""/>
