--- a/sharehomeworkinfo/sharehomeworkinfo.html
+++ b/sharehomeworkinfo/sharehomeworkinfo.html
@@ -84,7 +84,7 @@
                 <span class="step_span_tip">第二步：使用学生智学网账号密码登录；</span>
             </div>
             <div class="step_div_tip">
-                <span class="step_span_tip">第一步：在首页点击“练习中心”查看练习。</span>
+                <span class="step_span_tip">第三步：在首页点击“练习中心”查看练习。</span>
             </div>
         </div>
         <!--空白容器-->
@@ -109,36 +109,36 @@
 <script src="js/vue.js"></script>
 <script src="js/index.js"></script>
 <script type="text/javascript">
-    $(function () {
-        //判断h5是否从微信进入
-        if(window.navigator.userAgent.toLowerCase().match(/MicroMessenger/i) == 'micromessenger'){
-            document.body.addEventListener('touchmove', function (e) {
-                e.preventDefault(); //阻止默认的处理方式(阻止下拉滑动的效果)
-            }, {passive: false});
-            $('#coverBackview').css('display','block');
-        };
-
-        //打开应用
-        $('a').click(function () {
-            var u = navigator.userAgent, app = navigator.appVersion;
-            var isAndroid = u.indexOf('Android') > -1 || u.indexOf('Linux') > -1; //android终端或者uc浏览器
-            var isiOS = !!u.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/); //ios终端
-            console.log('是否是Android：'+isAndroid);
-            console.log('是否是iOS：'+isiOS);
-            //打开appstore或app
-            if (isiOS) {
-                //appstore商店
-                window.location.href = "zhixue://";
-                timer = setTimeout(function() {
-                    window.location.href = "https://itunes.apple.com/cn/app/智学网-让学习更简单/id981030648?mt=8";
-                }, 3000);
-            }
-            //打开android应用或应用宝
-            if (isAndroid) {
-                $('a').attr('href','http://www.wjtr.com/download/index.html');
-            }
-        });
-    });
+    // $(function () {
+    //     //判断h5是否从微信进入
+    //     if(window.navigator.userAgent.toLowerCase().match(/MicroMessenger/i) == 'micromessenger'){
+    //         document.body.addEventListener('touchmove', function (e) {
+    //             e.preventDefault(); //阻止默认的处理方式(阻止下拉滑动的效果)
+    //         }, {passive: false});
+    //         $('#coverBackview').css('display','block');
+    //     };
+    //
+    //     //打开应用
+    //     $('a').click(function () {
+    //         var u = navigator.userAgent, app = navigator.appVersion;
+    //         var isAndroid = u.indexOf('Android') > -1 || u.indexOf('Linux') > -1; //android终端或者uc浏览器
+    //         var isiOS = !!u.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/); //ios终端
+    //         console.log('是否是Android：'+isAndroid);
+    //         console.log('是否是iOS：'+isiOS);
+    //         //打开appstore或app
+    //         if (isiOS) {
+    //             //appstore商店
+    //             window.location.href = "zhixue://";
+    //             timer = setTimeout(function() {
+    //                 window.location.href = "https://itunes.apple.com/cn/app/智学网-让学习更简单/id981030648?mt=8";
+    //             }, 3000);
+    //         }
+    //         //打开android应用或应用宝
+    //         if (isAndroid) {
+    //             $('a').attr('href','http://www.wjtr.com/download/index.html');
+    //         }
+    //     });
+    // });
 </script>
 </body>
 </html>
