--- a/sharehomeworkinfoe/sharehomeworkinfo.html
+++ b/sharehomeworkinfoe/sharehomeworkinfo.html
@@ -23,7 +23,7 @@
     <link type="text/css" rel="styleSheet" href="./css/index.css" />
 </head>
 <body>
-<img style="display: none;width: 300px;height: 300px" src="image/icon_image@2x.png" alt=""/>
+<img style="display: none;" src="image/icon_image@2x.png" alt=""/>
 <div class="wrap" id="app" v-cloak>
     <img id="share_leftImage" src="./image/share_leftImg@2x.png" alt=""/>
     <img id="share_rightImage" src="./image/share_rightImg@2x.png" alt=""/>
