--- a/sharehomeworkinfoe/sharehomeworkinfo.html
+++ b/sharehomeworkinfoe/sharehomeworkinfo.html
@@ -140,7 +140,7 @@
             }
             //打开android应用或应用宝
             if (isAndroid) {
-                $('a').attr('href','http://www.wjtr.com/download/index.html');
+                $('a').attr('href','http://a.app.qq.com/o/simple.jsp?pkgname=[智学网-让学习更简单]');
             }
         });
     });
