--- a/sharehomeworkinfoe/sharehomeworkinfo.html
+++ b/sharehomeworkinfoe/sharehomeworkinfo.html
@@ -128,7 +128,7 @@
             var isAndroid = u.indexOf('Android') > -1 || u.indexOf('Linux') > -1; //android终端或者uc浏览器
             var isiOS = !!u.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/); //ios终端
             // console.log('是否是Android：'+isAndroid);
-            alert('是否是Android：'+isAndroid);
+            alert('是否是Android：'+isiOS);
             console.log('是否是iOS：'+isiOS);
             //打开appstore或app
             if (isiOS) {
