--- a/sharehomeworkinfoe/sharehomeworkinfo.html
+++ b/sharehomeworkinfoe/sharehomeworkinfo.html
@@ -134,9 +134,9 @@
             if (isiOS) {
                 //appstore商店
                 window.location.href = "zhixue://";
-                timer = setTimeout(function() {
-                    window.location.href = "https://itunes.apple.com/cn/app/智学网-让学习更简单/id981030648?mt=8";
-                }, 3000);
+                // timer = setTimeout(function() {
+                //     window.location.href = "https://itunes.apple.com/cn/app/智学网-让学习更简单/id981030648?mt=8";
+                // }, 3000);
             }
             //打开android应用或应用宝
             if (isAndroid) {
