--- a/sharehomeworkinfoe/sharehomeworkinfo.html
+++ b/sharehomeworkinfoe/sharehomeworkinfo.html
@@ -136,12 +136,12 @@
             var isAndroid = u.indexOf('Android') > -1 || u.indexOf('Linux') > -1; //android终端或者uc浏览器
             var isiOS = !!u.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/); //ios终端
             // console.log('是否是Android：'+isAndroid);
-            alert('是否是Android：'+isiOS);
+            // alert('是否是Android：'+isiOS);
             console.log('是否是iOS：'+isiOS);
             //打开appstore或app
             if (isiOS) {
                 //appstore商店
-                window.location.href = "zhixue://";
+                window.location.href = "zhixue://www.zhixue.com?{'productTag':'kdkt','productParams':{'module':'kdkt_course_catalog','densityType':79}}";
                 // timer = setTimeout(function() {
                 //     window.location.href = "https://itunes.apple.com/cn/app/智学网-让学习更简单/id981030648?mt=8";
                 // }, 3000);
