--- a/sharehomeworkinfoe/sharehomeworkinfo.html
+++ b/sharehomeworkinfoe/sharehomeworkinfo.html
@@ -6,13 +6,16 @@
     <meta name="full-screen" content="yes" />
     <meta name="x5-fullscreen" content="true" />
     <meta name="keywords" content="我是关键字" />
+    <meta itemprop="name" content="练习通知">
+    <meta itemprop="description" content="练习已发布成功,请前往智学APP作答">
+    <meta itemprop="image" content="./image/icon_image@2x.png">
     <meta name="description" content="练习已发布成功,请前往智学APP作答" />
     <meta http-equiv="Cache-Control" content="no-siteapp" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="format-detection" content="telephone=no,email=no" />
     <meta name="msapplication-tap-highlight" content="no" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no,minimal-ui"/>
-    <title>任务页面</title>
+    <title>练习通知</title>
     <link rel="icon" href="data:;base64,="/>
     <script src="js/jquery.js"></script>
     <style>
