--- a/sharehomework/sharehomeworkinfo.html
+++ b/sharehomework/sharehomeworkinfo.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="我是关键字" />
     <meta itemprop="name" content="练习通知">
     <meta itemprop="description" content="练习已发布成功,请前往智学APP作答">
-    <meta itemprop="image" content="./image/icon_image@2x.png">
+    <meta itemprop="image" content="http://mhwtest.zhixue.com/mhwpublic/sharehomeworkinfo/image/icon_image@2x.png">
     <meta name="description" content="练习已发布成功,请前往智学APP作答" />
     <meta http-equiv="Cache-Control" content="no-siteapp" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
@@ -29,7 +29,7 @@
 <!--网页中紧接着<body>加一个-->
 <div style='margin:0 auto;width:0px;height:0px;overflow:hidden;'>
     <!--图片宽高大于400px，最好是一个正方形的图片-->
-    <img src="./image/icon_image@2x.png" width='700'>
+    <img src="http://mhwtest.zhixue.com/mhwpublic/sharehomeworkinfo/image/icon_image@2x.png" width='700'>
 </div>
 <div class="wrap" id="app" v-cloak>
     <img id="share_leftImage" src="./image/share_leftImg@2x.png" alt=""/>
