--- a/sharehomework/sharehomeworkinfo.html
+++ b/sharehomework/sharehomeworkinfo.html
@@ -123,11 +123,11 @@
             var common = window.navigator.userAgent, appCommon = window.navigator.appVersion;
             var isAndroid = u.indexOf('Android') > -1 || u.indexOf('Linux') > -1; //android终端或者uc浏览器
             var isiOS = !!u.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/); //ios终端
-            alert(u);
-            alert(app);
-            alert(common);
-            alert(appCommon);
-            alert(u.toLowerCase());
+            // alert(u);
+            // alert(app);
+            // alert(common);
+            // alert(appCommon);
+            // alert(u.toLowerCase());
             // if(window.navigator.userAgent.toLowerCase().match(/MicroMessenger/i) == 'micromessenger'){
             //     alert("从微信浏览器打开");
             //     document.body.addEventListener('touchmove', function (e) {
@@ -145,8 +145,8 @@
             //打开appstore或app
             if (isiOS) {
                 //appstore商店
-                window.location.href = "zhixue://www.zhixue.com?{'productTag':'kdkt','productParams':{'module':'kdkt_course_catalog','densityType':79}}";
-                // window.location.href = "zhixue://";
+                // window.location.href = "zhixue://www.zhixue.com?{'productTag':'kdkt','productParams':{'module':'kdkt_course_catalog','densityType':79}}";
+                window.location.href = "zhixue://";
                 // window.location.href = "zhixue://www.zhixue.com?jumpHomeworkList";
                 // window.location.href = "zhixue://www.zhixue.com?{'productTag':'kdkt','productParams':{'module':'kdkt_course_catalog','densityType':79}}";
                 // timer = setTimeout(function() {
