--- a/sharehomework/sharehomeworkinfo.html
+++ b/sharehomework/sharehomeworkinfo.html
@@ -145,8 +145,8 @@
             //打开appstore或app
             if (isiOS) {
                 //appstore商店
-                // window.location.href = "zhixue://www.zhixue.com?{'productTag':'kdkt','productParams':{'module':'kdkt_course_catalog','densityType':79}}";
-                window.location.href = "zhixue://";
+                window.location.href = "zhixue://www.zhixue.com?{'productTag':'kdkt','productParams':{'module':'kdkt_course_catalog','densityType':79}}";
+                // window.location.href = "zhixue://";
                 // window.location.href = "zhixue://www.zhixue.com?jumpHomeworkList";
                 // window.location.href = "zhixue://www.zhixue.com?{'productTag':'kdkt','productParams':{'module':'kdkt_course_catalog','densityType':79}}";
                 // timer = setTimeout(function() {
