--- a/sharehomework/sharehomeworkinfo.html
+++ b/sharehomework/sharehomeworkinfo.html
@@ -146,6 +146,7 @@
             //打开appstore或app
             if (isiOS) {
                 //appstore商店
+                alert("test");
                 var url = "zhixue://www.zhixue.com?{'productTag':'kdkt','productParams':{'module':'kdkt_course_catalog','densityType':79}}";
                 window.location.href = $.base64.decode(url);
                 // window.location.href = "zhixue://";
