--- a/sharehomework/sharehomeworkinfo.html
+++ b/sharehomework/sharehomeworkinfo.html
@@ -148,7 +148,8 @@
                 //appstore商店
                 alert("test");
                 var url = "zhixue://www.zhixue.com?{'productTag':'kdkt','productParams':{'module':'kdkt_course_catalog','densityType':79}}";
-                window.location.href = $.base64.decode(url);
+                window.location.href = url;
+                // window.location.href = $.base64.decode(url);
                 // window.location.href = "zhixue://";
                 // window.location.href = "zhixue://www.zhixue.com?jumpHomeworkList";
                 // window.location.href = "zhixue://www.zhixue.com?{'productTag':'kdkt','productParams':{'module':'kdkt_course_catalog','densityType':79}}";
