--- a/sharehomework/sharehomeworkinfo.html
+++ b/sharehomework/sharehomeworkinfo.html
@@ -258,9 +258,9 @@
                 // }, 3000);
             }
             // //打开android应用或应用宝
-            // if (isAndroid) {
-            //     $('a').attr('href','http://a.app.qq.com/o/simple.jsp?pkgname=com.iflytek.elpmobile.smartlearning');
-            // }
+            if (isAndroid) {
+                $('a').attr('href','http://a.app.qq.com/o/simple.jsp?pkgname=com.iflytek.elpmobile.smartlearning');
+            }
         });
     });
 </script>
