--- a/sharehomework/sharehomeworkinfo.html
+++ b/sharehomework/sharehomeworkinfo.html
@@ -256,11 +256,17 @@
                 // timer = setTimeout(function() {
                 //     window.location.href = "https://itunes.apple.com/cn/app/智学网-让学习更简单/id981030648?mt=8";
                 // }, 3000);
-            }
+            // }
             // //打开android应用或应用宝
             if (isAndroid) {
-                $('a').attr('href','http://a.app.qq.com/o/simple.jsp?pkgname=com.iflytek.elpmobile.smartlearning');
+                window.location.href = "http://a.app.qq.com/o/simple.jsp?pkgname=com.iflytek.elpmobile.smartlearning";
             }
+            //     timer = setTimeout(function() {
+            //         window.location.href = "https://itunes.apple.com/cn/app/智学网-让学习更简单/id981030648?mt=8";
+            //     }, 3000);
+            //     // window.location.href = "scheme://";
+            //     // $('a').attr('href','http://a.app.qq.com/o/simple.jsp?pkgname=com.iflytek.elpmobile.smartlearning');
+            // }
         });
     });
 </script>
